<resources>
    <string name="app_name">lab1</string>
    <string name="tarifs">тарифы</string>
    <string name="lk">Личный кабинет</string>
    <string name="bill_title">Ваш счет</string>
    <string name="number">ЛС 0393847480</string>
    <string name="amount">130 р</string>
    <string name="to_month_amount">к оплате за сентябрь 0.00</string>
    <string name="refill">пополнить</string>
</resources>