<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UI.MainActivity">
    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:text="@string/lk"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bill_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/page_title"

        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bill_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"
            >

            <ImageView
                android:id="@+id/bill_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"

                android:layout_marginHorizontal="24dp"

                android:src="@drawable/ruble_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="32dp" />

            <TextView
                android:id="@+id/bill_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/bill_icon"
                tools:text="Ваш Счет"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/bill_title"
                />
            <TextView
                android:id="@+id/bill_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bill_card_title"
                app:layout_constraintStart_toEndOf="@id/bill_icon"
                tools:text="ЛС 0393847480"
                android:textSize="12sp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/number"
                />

            <TextView
                android:id="@+id/bill_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="#0000cc"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAlignment="textEnd"

                android:text="@string/amount"
                android:layout_marginTop="9dp"
                />

            <TextView
                android:id="@+id/bill_pay_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="12sp"
                android:layout_marginTop="12dp"
                android:text="@string/to_month_amount"
                />
            <TextView
                android:id="@+id/add_to_bill_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bill_icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:textColor="#b43000"
                android:textAlignment="textEnd"
                android:text="@string/refill"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV"
        android:layout_width="456dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"

        tools:listitem="@layout/layout_item_tarif" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/tarifs"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_card" />

    <TextView
        android:id="@+id/title_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Информация о пользователе"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV2"
        android:layout_width="456dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/title_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/layout_item_info"/>


</androidx.constraintlayout.widget.ConstraintLayout>